docs/.vuepress/theme/styles/custom/pages/_page-home.scss
// 
// Homepage
// 

$home-feature-icon-bottom-spacing: 2.625rem;

.page-container--home {

  // hide the header anchor links
  .header-anchor {
    display: none !important;
  }

  // hide the outbound link icon
  a .icon.outbound {
    display: none !important;
  }

  h1, h2, h3, h4, h5, h6 {
    border: 0;
  }

  // Containers

  .inner {
    overflow: hidden;
  }
}

// Helpers

.section-header {
  text-align: center;

  h2, h3, h4, h5, h6 {

    &:first-of-type {
      margin-top: 0;
    }
  }
}

.alt-title {
  
  &, > * {
    color: $navy;
    font-family: $base-font-family;
    font-weight: normal;
    font-size: 2rem;
  }
}

// Content masthead

.page-masthead-wrap {
  @include page-section;
  @include gradient-container;

  .inner {
    padding-left: 0;
    padding-right: 0;
  }

  h1 {
    font-size: 1.875rem;
  }

  h2 {
    font-size: 1.188rem;
    color: $gray-5;
  }
}

.page-masthead {

}

.page-masthead__actions {
  margin-top: 2rem;
  // margin-top: 3.75rem;
  // text-align: center;

  .btn:not(:last-of-type) {
    margin-right: 1rem;
  }
}

.page-masthead__diagram {
  text-align: center;
}

// Product features

.product-features {
  @include page-section;
  text-align: center;
}

.product-features__item {
  
  .inline-svg {
    margin: 0 auto $home-feature-icon-bottom-spacing auto;
  }
}

// Testimonial

.testimonial-wrap {
  // background-color: $color-16;
  @include page-section;
  padding-top: 0;

  a:not(.btn) {
    color: $color-5;

    &:hover {
      text-decoration: underline;
    }
  }
}

.testimonial {
  max-width: 38.75rem;
  margin: 0 auto;
  text-align: center;
  
  // resets
  blockquote, cite {
    padding: 0;
    margin: 0;
    border: 0;
    font-style: normal;
    color: inherit;
  }
}

.content__testimonial-content {
  border: 0;
  font-size: 1.438rem;
  
  > p {
    @include quotify;

    &:before, &:after {
      display: inline-block;
    }
  }
}

.testimonial__portrait {
  border-radius: 100%;
  overflow: hidden;
  margin-right: 1.25rem;
  width: 5rem;
  height: 5rem;

  img {
    @include img-full;
    object-fit: cover;
  }
}

.testimonial__cite {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: left;

  p {
    margin: 0;
    padding: 0;
  }
}

.content__testimonial-author {
  font-weight: $fw-medium;
}

.content__testimonial-author-info {
  display: flex;
  align-items: center;

  &:before {
    display: block;
    content: "";
    background-color: $color-8;
    width: 8px;
    height: 8px;
    transform: rotate(45deg);
    margin-right: 10px;
  }
}

// Steps

.steps-wrap {
  @include page-section;
  background-color: $color-6;
  color: #fff;
}

.steps-items {
  overflow: visible !important;

  .section-header {
    margin-bottom: 4rem;
  }

  // hide the line numbers on code blocks
  .line-numbers-mode:after,
  .line-numbers-wrapper {
    display: none !important;
  }

  .line-numbers-mode pre {
    padding: 1rem !important;
    @include scrollbar-h;
  }

  a:not(.btn) {
    color: $green-base;

    &:hover { 
      color: #fff;
      text-decoration: underline;
    }
  }
    
}

.steps-items__header {
  
}

.steps-items__content {
  $i: 45px; // dimensions of the step number

  position: relative;
  counter-reset: steps;
  list-style-type: none;
  margin: 0;
  padding: 0;

  &:after {
    position: absolute;
    top: 0;
    z-index: 0;
    left: 14px;
    display: block;
    width: 1px;
    height: 74%;
    content: "";
    background-color: rgba(#fff, 0.5);
  }
  
  > li {
    padding-left: 85px;
    position: relative;

    &:not(:last-of-type) {
      margin-bottom: 4.063rem;
    }

    &:before {
      position: absolute;
      top: 0;
      left: 0;
      z-index: 1;
      background-color: $color-6;
      counter-increment: steps;
      content: counters(steps, ".") " ";
      border-radius: 100%;
      border: 1px solid rgba(#fff, 0.5);
      font-weight: $fw-medium;
      text-align: center;
      line-height: calc(#{$i} - 4px);
      width: $i;
      height: $i;
    }
  }

  [class*="content__step"] > *:first-of-type {
    margin-top: 0;
    padding-top: 0;
  }
}

// Before and After section

.before-after-wrap {
  @include page-section;
  text-align: center;

  h4 {
    font-size: 0.875rem;
    text-transform: uppercase;
    color: $color-4;
    margin-bottom: 2.188rem;
  }
}

@media (max-width: $MQLarge) {
  .page-masthead {
    margin-bottom: 2rem;
    text-align: center;
  }
}

